--- a/SLAY/index.html
+++ b/SLAY/index.html
@@ -3,9 +3,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
 </head>
+<!-- сделать рандомайзер слова по дням
+добавить гифку к каждому слову
+добавить звук -->
+
 <body>
   <div id='main' title='Наведи курсор на текст'>
-    <span id='text' title="">slay<div id="over"></div></span>
+    <span class='text' title="">slay<div class="over"></div></span>
+<!--     <span class='text' title="">ве<div class="over"></div></span>
+    <span class='text' title="">ра<div class="over"></div></span>
+    <span class='text' title="">Ша<div class="over"></div></span>
+    <span class='text' title="">ко<div class="over"></div></span>
+    <span class='text' title="">вец<div class="over"></div></span> -->
   </div>
 </body>
 <script src="script.js"></script>
