new_script_slay

--- a/SLAY/index.html
+++ b/SLAY/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id='main' title='Наведи курсор на текст'>
-    <span class='text' title="">slay<div class="over"></div></span>
+    <span class='text' title=""><div class="over"></div></span>
 <!--     <span class='text' title="">ве<div class="over"></div></span>
     <span class='text' title="">ра<div class="over"></div></span>
     <span class='text' title="">Ша<div class="over"></div></span>
